# Vision

./: .gitignore  CMakeLists.txt  README.md
Android/: README.md  local.properties
Android/MainSource/C++/: algorithms.cpp
Android/ResearchPaper/: abstract.tex  introduction.tex  mypackages.tex  ourmethod.tex  relatedwork.tex  results.tex
Android/ResearchPaper_md/: ResearchPaper.md
Android/WalkingAssistance/: build.gradle
Android/WalkingAssistance/app/: build.gradle
Android/WalkingAssistance/app/src/androidTest/java/com/github/codertimo/walkingassistance/: ApplicationTest.java
Android/WalkingAssistance/app/src/main/java/com/github/codertimo/walkingassistance/: ConnerDetector.java  CornerCode.java  CornerDetector.java  Count.java  EscapeCode.java  MainActivity.java
Android/WalkingAssistance/app/src/main/jni/: Android.mk  Application.mk  com_github_codertimo_walkingassistance_MainActivity.h  main.cpp
Android/WalkingAssistance/app/src/main/jni/core/: ConerDetection.cpp  Processing.cpp  Processing.h  android_core.cpp  android_core.h  line.cpp  line.h
Android/WalkingAssistance/app/src/main/jni/core/CornerDetector/: CornerDetection.h
Android/WalkingAssistance/app/src/main/jni/core/EscapeDetector/: CompareLine.cpp  EscapeDetection.cpp  EscapeDetection.h  LineMap.cpp  LineMap.h
Android/WalkingAssistance/app/src/main/jni/core/LineDetector/: line.cpp  line.h
Android/WalkingAssistance/gradle/wrapper/: gradle-wrapper.properties
Android/WalkingAssistance/openCVLibrary310/: build.gradle
Android/app/src/androidTest/java/com/codertimo/sidewalkdetection/: ApplicationTest.java
Android/app/src/main/java/com/codertimo/sidewalkdetection/: MainActivity.java
Android/app/src/main/java/com/codertimo/sidewalkdetection/algorithm/: SWDAlgorithm.java  SWDGlobalValue.java  SWDProcessor.java  SWDSubAlgorithm.java
Android/app/src/main/java/com/codertimo/sidewalkdetection/algorithm/type/: Vec4i.java
Android/app/src/main/java/com/codertimo/sidewalkdetection/test/: CameraStreaming.java  ProcessingTest.java  VideoStreaming.java
Android_Core/: CMakeLists.txt  android_core.cpp  android_core.h  default.h  main.cpp
Android_Core/CornerDetector/: CornerDetection.cpp  ResultLines.cpp  ResultLines.h
Android_Core/EscapeDetector/: CompareableLine.cpp  CompareableLine.h  EscapeDetection.cpp  LineMap.cpp
Android_Core/LineDetector/: line.cpp  line.h
Android_JNI/Fragment/app/: build.gradle  proguard-rules.pro
Android_JNI/Fragment/app/src/androidTest/java/com/github/codertimo/fragment/: ApplicationTest.java
Android_JNI/Fragment/app/src/main/java/com/github/codertimo/fragment/: Fragment1.java  Fragment2.java  MainActivity.java
Android_JNI/Fragment/app/src/test/java/com/github/codertimo/fragment/: ExampleUnitTest.java
Android_JNI/Inflation/app/: build.gradle
Android_JNI/Inflation/app/src/androidTest/java/com/github/codertimo/inflation/: ApplicationTest.java
Android_JNI/Inflation/app/src/main/java/com/github/codertimo/inflation/: MainActivity.java  ResultActivity.java
Android_JNI/Inflation/app/src/test/java/com/github/codertimo/inflation/: ExampleUnitTest.java
Android_JNI/JNISource/: ConerDetection.cpp  Processing.cpp  Processing.h  main.h
Android_JNI/UpDown/app/: build.gradle
Android_JNI/UpDown/app/src/androidTest/java/com/github/codertimo/updown/: ApplicationTest.java
Android_JNI/UpDown/app/src/main/java/com/github/codertimo/updown/: Card.java  MainActivity.java  ResultActivity.java
Android_JNI/UpDown/app/src/test/java/com/github/codertimo/updown/: ExampleUnitTest.java
Android_JNI/WalkingAssistance/app/: build.gradle
Android_JNI/WalkingAssistance/app/src/main/java/com/github/codertimo/walkingassistance/: MainActivity.java
Android_JNI/WalkingAssistance/app/src/main/jni/: Android.mk  Application.mk  com_github_codertimo_walkingassistance_MainActivity.h  main.cpp
Android_JNI/WalkingAssistance/app/src/main/jni/core/: Processing.cpp  Processing.h  line.cpp  line.h
Android_JNI/WalkingAssistance/app/src/test/java/com/github/codertimo/walkingassistance/: ExampleUnitTest.java
Android_JNI/WalkingAssistance/gradle/wrapper/: gradle-wrapper.properties
Android_JNI/WorldCup/app/: build.gradle
Android_JNI/WorldCup/app/src/androidTest/java/com/github/codertimo/worldcup/: ApplicationTest.java
Android_JNI/WorldCup/app/src/main/java/com/github/codertimo/worldcup/: IUImages.java  MainActivity.java
Android_JNI/WorldCup/app/src/test/java/com/github/codertimo/worldcup/: ExampleUnitTest.java
C++/: CMakeLists.txt  ConerDetection.cpp  Processing.cpp  Processing.h  cluster.cpp  cluster.h  color.cpp  color.h  default.h  main.cpp  main.h
Core/: CMakeLists.txt  main.cpp  main.h
Core/CornerDetector/: CornerCode.h  CornerDetection.cpp  CornerDetection.h  Processing.cpp  Processing.h  ResultLines.cpp  ResultLines.h  default.h  line.cpp  line.h
Core/EscapeDetector/: EscapeDetection.cpp  EscapeDetection.h
Core/LineDetector/: line.cpp  line.h
Core/Loging/: Loging.cpp  Loging.h
MainSource/C++/: CompareableLine.cpp  CompareableLine.h  LineMap.cpp  LineMap.h  algorithms.cpp  header.h  hello.txt
MainSource/Java/: CompareableLine.java
ResearchPaper/: abstract.tex  conclusion.tex  introduction.tex  ourmethod.tex  readme.md  readme.txt  relatedwork.tex  results.tex  sidewalk detection-3.tex  sidewalk.aux  sidewalk.bbl  sidewalk.blg  sidewalk.brf  sidewalk.tex
Stablization/: CMakeLists.txt  main.cpp
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/codertimo/sidewalkdetection/: MainActivity.java
app/src/main/java/com/codertimo/sidewalkdetection/algorithm/: ComparableLine.java  LineMap.java  SWDAlgorithm.java  SWDGlobalValue.java  SWDProcesser.java  SWDProcessor.java  SWDSubAlgorithm.java  SWDUtil.java  Vec4f.java  Vec4i.java
app/src/main/java/com/codertimo/sidewalkdetection/algorithm/type/: ComparableLine.java  Vec4f.java  Vec4i.java
app/src/main/java/com/codertimo/sidewalkdetection/test/: ProcessingTest.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
openCVLibrary2411/: build.gradle
