cmake_minimum_required(VERSION 3.3)
project(SideWalkDetection)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    Android/MainSource/C++/algorithms.cpp
    Android/MainSource/C++/CompareableLine.cpp
    Android/MainSource/C++/CompareableLine.h
    Android/MainSource/C++/header.h
    Android/MainSource/C++/LineMap.cpp
    Android/MainSource/C++/LineMap.h
    Android/OpenCV-android-sdk/samples/face-detection/jni/DetectionBasedTracker_jni.cpp
    Android/OpenCV-android-sdk/samples/face-detection/jni/DetectionBasedTracker_jni.h
    Android/OpenCV-android-sdk/samples/tutorial-2-mixedprocessing/jni/jni_part.cpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv/cv.h
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv/cv.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv/cvaux.h
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv/cvaux.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv/cvwimage.h
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv/cxcore.h
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv/cxcore.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv/cxeigen.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv/cxmisc.h
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv/highgui.h
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv/ml.h
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/calib3d/calib3d.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/calib3d/calib3d_c.h
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/core/cuda/detail/color_detail.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/core/cuda/detail/reduce.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/core/cuda/detail/reduce_key_val.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/core/cuda/detail/transform_detail.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/core/cuda/detail/type_traits_detail.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/core/cuda/detail/vec_distance_detail.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/core/cuda/block.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/core/cuda/border_interpolate.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/core/cuda/color.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/core/cuda/common.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/core/cuda/datamov_utils.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/core/cuda/dynamic_smem.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/core/cuda/emulation.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/core/cuda/filters.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/core/cuda/funcattrib.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/core/cuda/functional.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/core/cuda/limits.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/core/cuda/reduce.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/core/cuda/saturate_cast.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/core/cuda/scan.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/core/cuda/simd_functions.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/core/cuda/transform.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/core/cuda/type_traits.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/core/cuda/utility.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/core/cuda/vec_distance.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/core/cuda/vec_math.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/core/cuda/vec_traits.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/core/cuda/warp.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/core/cuda/warp_reduce.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/core/cuda/warp_shuffle.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/core/affine.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/core/base.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/core/bufferpool.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/core/core.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/core/core_c.h
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/core/cuda.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/core/cuda.inl.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/core/cuda_stream_accessor.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/core/cuda_types.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/core/cvdef.h
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/core/cvstd.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/core/cvstd.inl.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/core/directx.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/core/eigen.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/core/ippasync.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/core/mat.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/core/mat.inl.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/core/matx.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/core/ocl.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/core/ocl_genbase.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/core/opengl.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/core/operations.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/core/optim.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/core/persistence.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/core/private.cuda.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/core/private.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/core/ptr.inl.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/core/sse_utils.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/core/traits.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/core/types.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/core/types_c.h
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/core/utility.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/core/version.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/core/wimage.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/features2d/features2d.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/flann/all_indices.h
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/flann/allocator.h
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/flann/any.h
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/flann/autotuned_index.h
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/flann/composite_index.h
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/flann/config.h
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/flann/defines.h
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/flann/dist.h
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/flann/dummy.h
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/flann/dynamic_bitset.h
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/flann/flann.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/flann/flann_base.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/flann/general.h
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/flann/ground_truth.h
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/flann/hdf5.h
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/flann/heap.h
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/flann/hierarchical_clustering_index.h
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/flann/index_testing.h
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/flann/kdtree_index.h
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/flann/kdtree_single_index.h
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/flann/kmeans_index.h
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/flann/linear_index.h
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/flann/logger.h
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/flann/lsh_index.h
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/flann/lsh_table.h
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/flann/matrix.h
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/flann/miniflann.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/flann/nn_index.h
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/flann/object_factory.h
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/flann/params.h
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/flann/random.h
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/flann/result_set.h
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/flann/sampling.h
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/flann/saving.h
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/flann/simplex_downhill.h
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/flann/timer.h
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/hal/defs.h
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/hal/intrin.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/hal/intrin_cpp.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/hal/intrin_neon.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/hal/intrin_sse.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/highgui/highgui.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/highgui/highgui_c.h
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/imgcodecs/imgcodecs.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/imgcodecs/imgcodecs_c.h
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/imgcodecs/ios.h
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/imgproc/imgproc.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/imgproc/imgproc_c.h
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/imgproc/types_c.h
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/ml/ml.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/objdetect/detection_based_tracker.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/objdetect/objdetect.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/objdetect/objdetect_c.h
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/photo/cuda.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/photo/photo.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/photo/photo_c.h
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/shape/emdL1.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/shape/hist_cost.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/shape/shape.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/shape/shape_distance.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/shape/shape_transformer.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/stitching/detail/autocalib.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/stitching/detail/blenders.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/stitching/detail/camera.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/stitching/detail/exposure_compensate.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/stitching/detail/matchers.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/stitching/detail/motion_estimators.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/stitching/detail/seam_finders.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/stitching/detail/timelapsers.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/stitching/detail/util.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/stitching/detail/util_inl.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/stitching/detail/warpers.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/stitching/detail/warpers_inl.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/stitching/warpers.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/superres/optical_flow.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/video/background_segm.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/video/tracking.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/video/tracking_c.h
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/video/video.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/videoio/cap_ios.h
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/videoio/videoio.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/videoio/videoio_c.h
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/videostab/deblurring.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/videostab/fast_marching.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/videostab/fast_marching_inl.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/videostab/frame_source.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/videostab/global_motion.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/videostab/inpainting.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/videostab/log.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/videostab/motion_core.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/videostab/motion_stabilizing.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/videostab/optical_flow.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/videostab/outlier_rejection.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/videostab/ring_buffer.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/videostab/stabilizer.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/videostab/wobble_suppression.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/calib3d.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/core.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/cvconfig.h
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/features2d.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/flann.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/hal.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/highgui.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/imgcodecs.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/imgproc.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/ml.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/objdetect.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/opencv.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/opencv_modules.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/photo.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/shape.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/stitching.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/superres.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/video.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/videoio.hpp
    Android/OpenCV-android-sdk/sdk/native/jni/include/opencv2/videostab.hpp
    Android_JNI/WalkingAssistance/app/src/main/jni/com_github_codertimo_walkingassistance_MainActivity.h
    Android_JNI/WalkingAssistance/app/src/main/jni/main.cpp
    C++/cluster.cpp
    C++/cluster.h
    C++/color.cpp
    C++/color.h
    C++/ConerDetection.cpp
    C++/ConerDetection.h
    C++/default.h
    C++/line.cpp
    C++/line.h
    C++/main.cpp
    C++/main.h
    C++/Processing.cpp
    C++/Processing.h)

add_executable(SideWalkDetection ${SOURCE_FILES})